package uniupo.valpre.bcnnsim.random;

import java.util.Random;

public abstract class Distribution
{
	public abstract Double generate(RandomGenerator stream);
}
